# minitrue

./: .gitignore  .minitrue.toml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  testing.yml
config/: minitrue.gpg  test.toml  test.toml.mt
minitrue/: __init__.py  __main__.py  addconfig.py  addkey.py  cli.py  compose.py  config.py  git.py  gpg.py  init.py  keychain.py  local_config.py  prompt.py  set.py  view.py
minitrue/utils/: file.py
tests/: __init__.py  config_test.py  git_test.py  gpg_test.py  gpg_util.py  keychain_test.py  local_config_test.py  view_test.py
tests/resources/: .minitrue.toml  dotminitrue  test2.pub
tests/resources/keys/: test1.pub  test1.pvt
