[project]
name = "minitrue"
version = "0.1.0"
description = "minitrue configuration system"
dependencies = [
  "pygit2",
  "pygpgme",
  "pytomlpp",
  "questionary",
  "typer",
  "jinja2"
]

[project.scripts]
minitrue = "minitrue.cli:app"

[tool.ruff]
lint.extend-select = ["C4", "NPY", "PD", "SIM", "TCH"]
lint.ignore = ["E501"]
show-fixes = true
target-version = "py310"
